[lab2] implemented, need checking